<resources>
    <string name="app_name">GDIn Time</string>
    <string name="title_home">Home</string>
    <string name="title_curriculum">Curriculum</string>
    <string name="title_profile">Profile</string>
    <string name="email">E-mail</string>
    <string name="EditText_email">Insert your e-mail</string>
    <string name="EditText_psw">Insert password</string>
    <string name="login">Login</string>
    <string name="registration">Register</string>
    <string name="title_reg_you">You</string>
    <string name="title_reg_det">Details</string>
    <string name="title_reg_time">Study time</string>
    <string name="show_probab">Show probability</string>
    <string name="next_exam">Next exams</string>
    <string name="settings">settings</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="psw">Password</string>
    <string name="birthdate">Birth date</string>
    <string name="next">Next</string>
    <string name="personal_data">Personal Data</string>
    <string name="account">Account Data</string>
    <string name="uni_year">Enrollment year</string>
    <string name="moved">Did you move to study?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok" translatable="false">OK</string>
    <string name="noName">You didn\'t enter your name</string>
    <string name="noSurname">You didn\'t enter your surname</string>
    <string name="noBirthdate">You didn\'t enter your bithdate</string>
    <string name="noEmail">You didn\'t enter your e-mail</string>
    <string name="noPsw">You didn\'t enter password</string>
    <string name="incorrectEmail">You have entered an incorrect e-mail</string>
    <string name="incorrectPsw">The password must contain at least 8 characters, numbers, lowercase and uppercase letters</string>
    <string name="Stud">STUDENT \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        \u0020\u0020\u0020\u0020\u0020\u0020If it is a not-working student. \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        Study time > 75%</string>
    <string name="StudWork">STUDENT-WORKER \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        If it is a working student. \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 50% &lt; study time &lt; 75%</string>
    <string name="WorkStud">WORKER-STUDENT \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        If it is a student worker. \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 Study time &lt; 50%</string>
    <string name="noMoved">You didn\'t enter if you moved</string>
    <string name="noTime">You didn\'t enter your study time</string>
    <string name="title_exam">Exam</string>
    <string name="place">Place:</string>
    <string name="prof">Professor/s:</string>
    <string name="info">Info:</string>
    <string name="notification" translatable="false">notification</string>
    <string name="edit" translatable="false">edit</string>
    <string name="delete" translatable="false">delete</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="place_edit">Place</string>
    <string name="prof_edit">Professor/s</string>
    <string name="info_edit">Info</string>
    <string name="areYouSure">Are you sure you want to leave this page?</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="noDate">You didn\'t enter date</string>
    <string name="noTimes">You didn\'t enter time</string>
    <string name="title_settings">Settings</string>
    <string name="myAccount">My account</string>
    <string name="edit_data">Edit my data</string>
    <string name="delete_account">Delete account</string>
    <string name="change_psw">Change password</string>
    <string name="notification_push">Push notifications</string>
    <string name="exit">Exit</string>
    <string name="or">OR</string>
    <string name="facebook_app_id" translatable="false">2359999374217548</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2359999374217548</string>
    <string name="login_error_title">Missing data</string>
    <string name="login_error_message">The email or password fields are empty or incorrect</string>
    <string name="app_name_long">Graduation In Time</string>
    <string name="signup">Signup</string>
    <string name="continue_email">Continue with e-mail</string>
    <string name="finish">FINISH</string>
    <string name="student">STUDENT</string>
    <string name="studwork">STUDENT - WORKER</string>
    <string name="workstud">WORKER - STUDENT</string>
    <string name="DeleteAccount">Are you sure you want to delete accont?</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_photo">Profile photo</string>
    <string name="pick_image_intent_text">Add image</string>
    <string name="Stud_short">STUDENT \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
        \u0020\u0020\u0020\u0020study time > 75%</string>
    <string name="StudWork_short">STUDENT-WORKER \u0020\u0020\u0020\u0020\u0020\u0020 50% &lt; study time &lt; 75%</string>
    <string name="WorkStud_shrt">WORKER-STUDENT \u0020\u0020\u0020\u0020\u0020\u0020study time &lt; 50%</string>
    <string name="title_progress">Progress</string>
    <string name="button_progress">ADD/EDIT PASSED EXAM</string>
    <string name="show_list">SHOW ENTIRE LIST</string>
    <string name="title_average">Average</string>
    <string name="weighted">\u0020\u0020\u0020Weighted : </string>
    <string name="arithmetic">\u0020\u0020\u0020Arithmetic : </string>
    <string name="passed_exams">PASSED EXAMS</string>
    <string name="title_thesis">Thesis</string>
    <string name="argument">\u0020\u0020\u0020ARGUMENT</string>
    <string name="add_argument">ADD ARGUMENT</string>
    <string name="title_next_exam">Next exam recommended</string>
    <string name="edit_psw">Edit password</string>
    <string name="EditText_new_psw">New password</string>
    <string name="EditText_retype">Retype password</string>
    <string name="differentPsw">Different passwords</string>
    <string name="sure_exit">Are you sure you want to quit?</string>
    <string name="passed_exam">Passed exam</string>
    <string name="incorrectExam">Exam is incorrect</string>
    <string name="title_recommendation">Recommendation</string>
    <string name="incorrectDate">Date is incorrect</string>
    <string name="passed_exams_min">Passed exams</string>
    <string name="sure_delete">Are you sure you want to delete this item?</string>
    <string name="information">INFORMATION</string>
    <string name="argument_min">Argument</string>
    <string name="argument_thesis">Thesis argument</string>
    <string name="DeleteExam">Are you sure you want to delete exam?</string>
    <string name="noArgument">You didn\'t enter argument</string>
    <string name="add_date">Add the date to one of the next recommended exams in profile to show it here</string>
    <string name="six_days">in 6 days</string>
    <string name="tomorrow">tomorrow</string>
    <string name="next_exame">Next exam</string>
    <string name="title_notification">Notifications</string>
    <string name="remove_notification">Are you sure you wont to remove notification?</string>
    <string name="no_notications">No notification set</string>
    <string name="no_exam">No passed exam</string>
    <string name="personal_info">PERSONAL INFORMATION</string>
    <string name="born_on">Born on</string>
    <string name="age">Age</string>
    <string name="birth_place">Birth place</string>
    <string name="citizenship">Citizenship</string>
    <string name="cf">CF</string>
    <string name="address">Address</string>
    <string name="driving_license">Driving licens</string>
    <string name="with_car">with car</string>
    <string name="without_car">without car</string>
    <string name="cell">Cell</string>
    <string name="professional_goal">PROFESSIONAL GOAL</string>
    <string name="soft_skill">SOFT SKILL</string>
    <string name="experiences">WORK/INTERNSHIP EXPERIENCES</string>
    <string name="education">EDUCATION</string>
    <string name="language_skills">LANGUAGES SKILLS</string>
    <string name="it_skills">IT SKILLS</string>
    <string name="distance_workplace">DISTANCE FROM WORKPLACE</string>
    <string name="personal_infos">This section is dedicated to contact details and other personal information.
        We advise you to keep this data up to date to allow companies direct contact. You can insert a photo;
        after having loaded it you will have the possibility to modify its position, to center the image in an optimal way.
        Finally, you can add indications regarding useful links.</string>
    <string name="goal_infos">Explain in a few simple words what goals you want to achieve in your professional future, you
        will help those who have to select you to understand who you are and what goals you set yourself.</string>
    <string name="skill_infos">These are important personal characteristics in any working context because these
        influence the way we deal with the demands of the working environment from time to time.  Read the definitions
        of each skill carefully and rate yourself from a minimum of 1 to a maximum of 10.</string>
    <string name="experiences_infos">You can add any work experience. Explain what job you did, what the company does, the
        time period you worked, the name of the company and the skills you acquired.</string>
    <string name="distance_infos">Indicate the provinces in which you would prefer to work. Are you willing to travel? And at
        what distance?</string>
    <string name="education_infos">This section collects all the information about your academic career and includes all courses
        of study, even those not completed or still ongoing. You can enter the type of high school diploma (technical, classical,
        scientific, etc.), the school, the grade, the year of graduation, type of diploma (e.g. Italian) and the type of school
        (e.g. state). For the degrees instead, indicate the university, the department, the faculty, the grade and the year of
        graduation.</string>
    <string name="have_car">Have you got a car?</string>
    <string name="contacts">Contacts</string>
    <string name="phone">Cellphone number</string>
    <string name="links">Useful links</string>
    <string name="fiscal_code">Fiscal code</string>
    <string name="favorite_provinces">Favorite provinces</string>
    <string name="home_transfers">yes, even with home transfers</string>
    <string name="frequent_transfers">yes, also frequent</string>
    <string name="limited_transfers">yes, in limited numbers</string>
    <string name="only_europe">yes, but only in Europe</string>
    <string name="non_european">yes, even in non-European countries</string>
    <string name="willing_make_trip">Are you willing to make business trips?</string>
    <string name="willing_move_abroad">Are you willing to move abroad?</string>
    <string name="photo">PHOTO</string>
    <string name="matriculation">Matriculation number</string>
</resources>