<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:title="@string/edit_profile"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/TextView_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:padding="15dp"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/TextView_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:padding="15dp"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/TextView_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_photo"
        android:padding="15dp"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/TextView_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthdate"
        android:padding="15dp"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/TextView_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:padding="15dp"
        android:textSize="20sp"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/TextView_year_enroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uni_year"
        android:padding="15dp"
        android:textSize="20sp"/>

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/TextView_moved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moved"
        android:padding="15dp"
        android:textSize="20sp"/>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/TextView_matriculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matriculation"
        android:padding="15dp"
        android:textSize="20sp"/>

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/TextView_study_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_reg_time"
        android:padding="15dp"
        android:textSize="20sp"/>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
</LinearLayout>